# cmake_template

./: .cmake-format.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  README_design.md  README_docker.md  README_rename.md  SECURITY.md  commitlint.config.js  conanfile.txt  dummy_cpp_dev.md  gcovr.cfg  rename.sh  tsconfig.json  vcpkg.json
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer-lock.json  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup_cache/: action.yml
.github/template/: README.md
.github/workflows/: ci.yml  clang-format-check.yml  commitlint.yml  template-janitor.yml
bench/: CMakeLists.txt  bench_factorial.cpp
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Doxygen.cmake  Hardening.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  README.md  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/myproject/: sample_library.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt
test/: CMakeLists.txt  constexpr_tests_gtest.cpp  mock_test_gtest.cpp  tests_gtest.cpp
test/cmake/: test_sanitizers_apple_excludes_leak.cmake  test_sanitizers_non_apple_includes_leak.cmake
